--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,8 @@
 
 # dependencies
 /node_modules
+node_modules/
+**/node_modules/
 /.pnp
 .pnp.*
 .yarn/*
@@ -16,9 +18,11 @@
 # next.js
 /.next/
 /out/
+.next/cache/
 
 # production
 /build
+dist/
 
 # misc
 .DS_Store
@@ -29,9 +33,31 @@ npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 .pnpm-debug.log*
+*.log
 
 # env files (can opt-in for committing if needed)
 .env*
+
+# local secrets / oauth tokens
+credentials.json
+server/credentials.json
+server/token.json
+
+# local tunneling tools
+ngrok
+ngrok.exe
+ngrok.yml
+
+# editors
+.vscode/
+.idea/
+.eslintcache
+.turbo/
+.cache/
+.parcel-cache/
+.history/
+*.swp
+*.swo
 
 # vercel
 .vercel
