--- a/package.json
+++ b/package.json
@@ -9,9 +9,23 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@babylonjs/core": "^8.46.2",
+    "@babylonjs/gui": "^8.46.2",
+    "@babylonjs/inspector": "^8.46.2",
+    "@babylonjs/loaders": "^8.47.0",
+    "@mediapipe/camera_utils": "^0.3.1675466862",
+    "@mediapipe/hands": "^0.4.1675469240",
+    "ethers": "^6.16.0",
+    "googleapis": "^170.1.0",
+    "mammoth": "^1.11.0",
     "next": "16.1.3",
+    "open": "^11.0.0",
     "react": "19.2.3",
-    "react-dom": "19.2.3"
+    "react-dom": "19.2.3",
+    "react-speech-recognition": "^4.0.1",
+    "react-webcam": "^7.2.0",
+    "regenerator-runtime": "^0.14.1",
+    "socket.io-client": "^4.8.3"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
